# rote

./: .gdb_history  .gitattributes  .gitignore  .rgignore  Cargo.toml  IDEAS.md  LICENSE-APACHE.txt  LICENSE-MIT  README.md  categorized  clippy  dev-run  test  test-lib
libs/abs/: Cargo.toml
libs/abs/src/: abs.rs  tests.proptest-regressions  tests.rs
libs/check_or_no_panic/libs/check_or_no_panic_proc_macro/: Cargo.toml
libs/check_or_no_panic/libs/check_or_no_panic_proc_macro/src/: check_or_no_panic_proc_macro.rs
libs/cursors/: Cargo.toml
libs/cursors/src/: cursors.rs
libs/cursors/src/tests/: arb.rs
libs/editor/: Cargo.toml
libs/editor/benches/: user_input.rs
libs/editor/libs/cursors/: Cargo.toml
libs/editor/libs/cursors/src/: cursors.rs
libs/editor/libs/edit/: Cargo.toml
libs/editor/libs/edit/src/: edit.rs  edit_tests.proptest-regressions  edit_tests.rs
libs/editor/libs/editor_types/: Cargo.toml
libs/editor/libs/editor_types/src/: editor_types.rs
libs/editor/libs/gap_buffer/: Cargo.toml
libs/editor/libs/gap_buffer/src/: gap_buffer.rs  tests.rs
libs/editor/libs/move_cursor/: Cargo.toml
libs/editor/libs/move_cursor/src/: move_cursor.rs
libs/editor/libs/panic_safe_rope/: Cargo.toml
libs/editor/libs/panic_safe_rope/src/: conversion.rs  panic_safe_rope.rs  slice.rs  tests.rs
libs/editor/libs/parsers/: Cargo.toml  build.rs
libs/editor/libs/parsers/src/: parsers.proptest-regressions  parsers.rs  tests.proptest-regressions  tests.rs
libs/editor/libs/parsers/tree-sitter-rust/: README.md
libs/editor/libs/paths/: Cargo.toml
libs/editor/libs/paths/src/: paths.rs
libs/editor/libs/rope_pos/: Cargo.toml
libs/editor/libs/rope_pos/src/: rope_pos.rs  tests.rs
libs/editor/libs/search/: Cargo.toml
libs/editor/libs/search/src/: search.rs  tests.proptest-regressions  tests.rs
libs/editor/libs/search_tree/: Cargo.toml
libs/editor/libs/search_tree/src/: lib.rs  search_tree.rs  tests.rs
libs/editor/libs/sorted/: Cargo.toml
libs/editor/libs/sorted/src/: sorted.rs  tests.rs
libs/editor/libs/text_buffer/: Cargo.toml
libs/editor/libs/text_buffer/src/: edit.rs  move_cursor.rs  test_macros.rs  tests.proptest-regressions  tests.rs  text_buffer.rs
libs/editor/libs/text_buffer_testing/: Cargo.toml
libs/editor/libs/text_buffer_testing/src/: arb.rs  unescape.rs
libs/editor/libs/unicode-segmentation/: Cargo.toml
libs/editor/libs/unicode-segmentation/src/: lib.rs  unicode_segmentation.rs
libs/editor/src/: editor.rs  editor_buffers.rs  editor_view.rs  tests.proptest-regressions  tests.regressions  tests.rs
libs/editor/src/tests/: update_and_render.proptest-regressions  update_and_render.regressions  update_and_render.rs
libs/editor/src/tests/update_and_render/: tracking_what_the_view_says_gives_the_correct_idea_about_the_state_of_the_buffers.proptest-regressions  (+2 more)
libs/f32_0_1/: Cargo.toml
libs/f32_0_1/src/: tests.rs
libs/move_cursor/: Cargo.toml
libs/move_cursor/src/: move_cursor.rs
libs/non_neg_f32/: Cargo.toml
libs/non_neg_f32/src/: non_neg_f32.rs  tests.rs
libs/panic_safe_rope/: Cargo.toml  README.md
libs/panic_safe_rope/src/: panic_safe_rope.rs  slice.rs  tests.rs
libs/panic_safe_rope/src/tests/: included_files.rs  pre-deleted.txt
libs/parsers/: Cargo.toml
libs/parsers/src/: parsers.rs  tests.rs
libs/parsers/src/query/: tests.rs
libs/perf_viz/: Cargo.toml
libs/perf_viz/libs/perf_viz_proc_macro/: Cargo.toml
libs/perf_viz/src/: lib.rs  perf_viz.rs
libs/platform_layer/: Cargo.toml
libs/platform_layer/libs/atomically/: Cargo.toml
libs/platform_layer/libs/atomically/src/: atomically.rs
libs/platform_layer/libs/edited_storage/: Cargo.toml
libs/platform_layer/libs/editor_thread/: Cargo.toml
libs/platform_layer/libs/file_chooser/: Cargo.toml
libs/platform_layer/libs/opengl/: Cargo.toml  README.md
libs/platform_layer/libs/path_mailbox/: Cargo.toml
libs/platform_layer/libs/rust-atomicwrites/: Cargo.toml  README.md
libs/platform_layer/libs/wimp/: Cargo.toml  README.md
libs/platform_layer/libs/wimp_render/: Cargo.toml
libs/platform_layer/libs/wimp_types/: Cargo.toml
libs/platform_layer/libs/window_layer/: Cargo.toml
libs/platform_layer/src/: lib.rs  opengl.rs
libs/platform_types/: Cargo.toml  bat
libs/platform_types/libs/abs/: Cargo.toml
libs/platform_types/libs/abs_pos/: Cargo.toml
libs/platform_types/libs/f32_0_1/: Cargo.toml
libs/platform_types/libs/g_i/: Cargo.toml
libs/platform_types/libs/move_mod/: Cargo.toml
libs/platform_types/libs/non_neg_f32/: Cargo.toml
libs/platform_types/libs/pos_f32/: Cargo.toml
libs/platform_types/libs/pos_f32_trunc/: Cargo.toml
libs/platform_types/src/: floating_point.rs  g_i.proptest-regressions  g_i.rs  lib.rs  move_mod.rs  platform_types.rs  screen_positioning.rs  spans.rs  tests.proptest-regressions  tests.rs
libs/platform_types/src/tests/: arb.rs
libs/pos_f32/: Cargo.toml
libs/pos_f32/src/: pos_f32.rs  tests.rs
libs/pub_arb/platform_types/: Cargo.toml
libs/pub_arb/platform_types/src/: pub_arb_platform_types.rs
libs/pub_arb/vec1/: Cargo.toml
libs/pub_arb/vec1/src/: pub_arb_vec1.rs
libs/rope_pos/: Cargo.toml
libs/text_buffer/: Cargo.toml
libs/text_buffer/src/: tests.proptest-regressions  tests.rs  text_buffer.rs
libs/text_buffer/src/tests/: arb.rs  cursor_manipulation.rs  does_not_lose_characters.rs  edit_tests.rs  included_files.rs  inserting_then_deleting.rs  strip_trailing_whitespace_does_not_increase_the_amount_of_characters.rs  uncategorized_tests.rs  undo_redo.rs
libs/text_buffer/test_data/: strip_trailing_whitespace_preserves_line_count
libs/text_pos/: Cargo.toml
libs/text_pos/src/: text_pos.rs
libs/vec1/: Cargo.toml
libs/vec1/src/: lib.rs
test-bug-reduction/libs/check_or_no_panic/: Cargo.toml
test-bug-reduction/libs/check_or_no_panic/src/: check_or_no_panic.rs
test-bug-reduction/libs/editor/: .gitignore  Cargo.toml
test-bug-reduction/libs/editor/benches/: user_input.rs
test-bug-reduction/libs/editor/src/: editor.rs  editor_buffers.rs  editor_view.rs  tests.proptest-regressions  tests.rs
(+378 files in other folders)
