[package]
name = "rote"
version = "0.2.26"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
license = "MIT and Apache 2.0"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"

[dependencies.editor]
path = "./libs/editor"

[dependencies.macros]
path = "./libs/macros"

[dependencies.perf_viz]
path = "./libs/perf_viz"

[dependencies.platform_types]
path = "./libs/platform_types"

[dependencies.platform_layer]
path = "./libs/platform_layer"

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"

[features]
default = []
invariant-checking = []
flame-chart = ["perf_viz/flame-chart"]
flame-graph = ["perf_viz/flame-graph"]

[workspace]

members = [
    "libs/editor",
    "libs/macros",
    "libs/perf_viz",
    "libs/platform_types",
    "libs/platform_layer",
]
