[package]
name = "rote"
version = "0.2.93"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
license = "MIT and Apache 2.0"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"

[dependencies.check_or_no_panic]
path = "./libs/check_or_no_panic"

[dependencies.editor]
path = "./libs/editor"

[dependencies.macros]
path = "./libs/macros"

[dependencies.perf_viz]
path = "./libs/perf_viz"

[dependencies.platform_types]
path = "./libs/platform_types"

[dependencies.platform_layer]
path = "./libs/platform_layer"

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"

[features]
default = []
invariant-checking = ["platform_layer/invariant-checking", "editor/invariant-checking"]
time-render = ["platform_layer/time-render"]
flame-chart = ["perf_viz/flame-chart"]
flame-graph = ["perf_viz/flame-graph"]
extra-prints = ["platform_layer/extra-prints", "editor/extra-prints"]
print-raw-input = ["platform_layer/print-raw-input"]

[workspace]

members = [
    "libs/editor",
    "libs/macros",
    "libs/perf_viz",
    "libs/platform_types",
    "libs/platform_layer",
]