[package]
name = "cursors"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/cursors.rs"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.macros]
path = "../macros"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../perf_viz"

[dependencies.rope_pos]
path = "../rope_pos"

[dependencies.vec1]
path = "../vec1"

[dependencies]
proptest = { version = "0.10", optional = true }
pub_arb_platform_types = { path = "../pub_arb/platform_types", optional = true }
pub_arb_text_pos = { path = "../pub_arb/text_pos", optional = true }
pub_arb_vec1 = { path = "../pub_arb/vec1", optional = true }

[dev-dependencies]
proptest = "0.10"
pub_arb_platform_types = { path = "../pub_arb/platform_types" }
pub_arb_text_pos = { path = "../pub_arb/text_pos" }
pub_arb_vec1 = { path = "../pub_arb/vec1" }

[features]
default = []
pub_arb = ["proptest", "pub_arb_platform_types", "pub_arb_text_pos", "pub_arb_vec1"]