[package]
name = "editor"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/editor.rs"

[dependencies]

[dependencies.check_or_no_panic]
path = "../check_or_no_panic"

[dependencies.if_changed]
path = "../if_changed"

[dependencies.perf_viz]
path = "../perf_viz"
[dependencies.perf_viz_proc_macro]
path = "../perf_viz/libs/perf_viz_proc_macro"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.macros]
path = "../macros"

[dependencies.editor_types]
path = "libs/editor_types"

[dependencies.text_buffer]
path = "libs/text_buffer"

[dependencies.paths]
path = "libs/paths"

[dev-dependencies]
criterion = "0.2"
proptest = "0.9"

[features]
default = []
invariant-checking = ["check_or_no_panic/invariant-checking"]
extra-prints = []

[[bench]]
name = "user_input"
harness = false
