[package]
name = "editor"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/editor.rs"

[dependencies]

[dependencies.editor_types]
path = "libs/editor_types"

[dependencies.fast_hash]
path = "../fast_hash"

[dependencies.if_changed]
path = "../if_changed"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../perf_viz"

[dependencies.perf_viz_proc_macro]
path = "../perf_viz/libs/perf_viz_proc_macro"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.macros]
path = "../macros"

[dependencies.parsers]
path = "libs/parsers"

[dependencies.paths]
path = "libs/paths"

[dependencies.search]
path = "libs/search"

[dependencies.text_buffer]
path = "libs/text_buffer"

[dependencies.vec1]
path = "../vec1"

[dev-dependencies]
criterion = "0.3"
proptest = "0.10"

[dev-dependencies.arb_macros]
path = "../arb_macros"

[dev-dependencies.pub_arb_g_i]
path = "../pub_arb/g_i"

[dev-dependencies.pub_arb_platform_types]
path = "../pub_arb/platform_types"

[dev-dependencies.pub_arb_text_buffer]
path = "../pub_arb/text_buffer"

[dev-dependencies.pub_arb_std]
path = "../pub_arb/std"

[dev-dependencies.pub_arb_abs]
path = "../pub_arb/abs"

[dev-dependencies.pub_arb_pos_f32]
path = "../pub_arb/pos_f32"

[dev-dependencies.pub_arb_non_neg_f32]
path = "../pub_arb/non_neg_f32"

[features]
default = []
invariant-checking = []
extra-prints = ["text_buffer/extra-prints"]
no-cache = []

[[bench]]
name = "user_input"
harness = false
