[package]
name = "f32_0_1"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/f32_0_1.rs"

[dependencies]
macros = { path = "../macros" }
non_neg_f32 = { path = "../non_neg_f32" }
pos_f32 = { path = "../pos_f32" }
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }

[dev-dependencies]
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }

[features]
default = []
pub_arb = ["proptest"]