[package]
name = "move_cursor"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/move_cursor.rs"

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.macros]
path = "../macros"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../perf_viz"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.rope_pos]
path = "../rope_pos"