[package]
name = "non_neg_f32"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/non_neg_f32.rs"

[dependencies]
pos_f32 = { path = "../pos_f32" }
macros = { path = "../macros" }
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }

[dev-dependencies]
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }

[features]
default = []
pub_arb = ["proptest"]