[package]
name = "panic_safe_rope"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/panic_safe_rope.rs"

[dependencies]
ropey = "1.3.1"

[dependencies.is_linebreak_char]
path = "../is_linebreak_char"

[dependencies.text_pos]
path = "../text_pos"

[dependencies.macros]
path = "../macros"

[dependencies.perf_viz]
path = "../perf_viz"

[dev-dependencies]
proptest = "0.10"

[features]
default = []
invariant-checking = []
