[package]
name = "platform_layer"
version = "0.0.1"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"
description = "platform layer(s) for rote"
license = "Apache-2.0"

[dependencies]
opengl = { path = "./libs/opengl" }
platform_types = { path = "../platform_types" }
macros = { path = "../macros" }

[features]
default = []
invariant-checking = []
time-render = ["opengl/time-render"]
