[package]
name = "platform_layer"
version = "0.0.1"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"
description = "platform layer(s) for rote"
license = "Apache-2.0"

[dependencies]
wimp = { path = "./libs/wimp" }
platform_types = { path = "../platform_types" }
macros = { path = "../macros" }

[features]
default = []
disable-fade-alpha = ["wimp/disable-fade-alpha"]
invariant-checking = ["wimp/invariant-checking"]
time-render = ["wimp/time-render"]
extra-prints = ["wimp/extra-prints"]
print-raw-input = ["wimp/print-raw-input"]
