[package]
name = "platform_types"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/platform_types.rs"

[dependencies]
vec1 = "1.4"
abs = { path = "../abs" }
f32_0_1 = { path = "./libs/f32_0_1" }
g_i = { path = "./libs/g_i" }
perf_viz = { path = "../perf_viz" }
pos_f32 = { path = "./libs/pos_f32" }
pos_f32_trunc = { path = "./libs/pos_f32_trunc" }
macros = { path = "../macros" }
move_mod = { path = "./libs/move_mod" }
non_neg_f32 = { path = "./libs/non_neg_f32" }
screen_space = { path = "../screen_space" }
text_pos = { path = "../text_pos" }
proptest = { version = "0.10", optional = true }

[dev-dependencies]
proptest = { version = "0.10" }

[features]
default = []
extra-prints = []
pub_arb = []
