[package]
name = "rope_pos"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/rope_pos.rs"

[dependencies]

[dependencies.editor_types]
path = "../editor_types"

[dependencies.macros]
path = "../macros"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../perf_viz"

[dev-dependencies]
proptest = "0.10"