[package]
name = "text_pos"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/text_pos.rs"

[dependencies]
macros = { path = "../macros" }
proptest = { version = "0.10", optional = true }

[dev-dependencies]
proptest = "0.10"

[features]
default = []
pub_arb = ["proptest"]