[package]
name = "text_pos"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/text_pos.rs"

[dependencies]
macros = { path = "../macros" }
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper", optional = true }

[dev-dependencies]
proptest = { package = "proptest_wrapper", path = "../proptest_wrapper" }

[features]
default = []
pub_arb = ["proptest"]