[package]
name = "vec1"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[dependencies]
vec1_external = { version = "1.4", package = "vec1" }
proptest = { version = "0.10", optional = true }

[dev-dependencies]
proptest = "0.10"

[features]
default = []
pub_arb = ["proptest"]