[package]
name = "pub_arb_vec1"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/pub_arb_vec1.rs"

[dependencies]
vec1 = { path = "../../../libs/vec1", features = ["pub_arb"]}
proptest = { package = "proptest_wrapper", path = "../../proptest_wrapper" }
