[package]
name = "check_or_no_panic"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/check_or_no_panic.rs"

[dependencies]
no-panic = "0.1"

[dependencies.check_or_no_panic_proc_macro]
path = "libs/check_or_no_panic_proc_macro"
# TODO figure out how to only require "quote" when "invariant-checking"
# is not enabled
#default-features = false

[features]
default = []
invariant-checking = ["check_or_no_panic_proc_macro/invariant-checking"]
