[package]
name = "editor"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/editor.rs"

[dependencies]

[dependencies.check_or_no_panic]
path = "../check_or_no_panic"

[dependencies.editor_types]
path = "libs/editor_types"

[dependencies.if_changed]
path = "../if_changed"

[dependencies.rope_pos]
path = "libs/rope_pos"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../perf_viz"

[dependencies.perf_viz_proc_macro]
path = "../perf_viz/libs/perf_viz_proc_macro"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.macros]
path = "../macros"

[dependencies.parsers]
path = "libs/parsers"

[dependencies.paths]
path = "libs/paths"

[dependencies.search]
path = "libs/search"

[dependencies.text_buffer]
path = "libs/text_buffer"

[features]
default = []
invariant-checking = ["check_or_no_panic/invariant-checking"]
extra-prints = ["text_buffer/extra-prints"]
