[package]
name = "check_or_no_panic_proc_macro"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/check_or_no_panic_proc_macro.rs"
proc-macro = true

[dependencies]
quote = { version = "0.6", optional = true }

[features]
default = ["quote"]
invariant-checking = []
