[package]
name = "edit"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/edit.rs"

[dependencies.cursors]
path = "../cursors"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.macros]
path = "../../../macros"

[dependencies.move_cursor]
path = "../move_cursor"

[dependencies.panic_safe_rope]
path = "../../../panic_safe_rope"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.platform_types]
path = "../../../platform_types"

[dependencies.rope_pos]
path = "../rope_pos"

[dependencies.vec1]
path = "../../../vec1"

[dependencies]
proptest = { version = "0.10", optional = true }
pub_arb_cursors = { path = "../../../pub_arb/cursors", optional = true }
pub_arb_vec1 = { path = "../../../pub_arb/vec1", optional = true }

[dev-dependencies]
proptest = "0.10"
pub_arb_cursors = { path = "../../../pub_arb/cursors" }
pub_arb_vec1 = { path = "../../../pub_arb/vec1" }

[features]
default = []
pub_arb = ["proptest", "pub_arb_cursors", "pub_arb_vec1"]
