[package]
name = "gap_buffer"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/gap_buffer.rs"


[dependencies]

[dependencies.macros]
path = "../../../macros"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.platform_types]
path = "../../../platform_types"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.unicode_segmentation]
path = "../unicode-segmentation"
