[package]
name = "panic_safe_rope"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/panic_safe_rope.rs"

[dependencies]
ropey = "1.0.1"

[dependencies.check_or_no_panic]
path = "../../../check_or_no_panic"

[dependencies.macros]
path = "../../../macros"

[features]
default = []
invariant-checking = ["check_or_no_panic/invariant-checking"]
