[package]
name = "parsers"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/parsers.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.6.1"

[dependencies.macros]
path = "../../../macros"

[dependencies.platform_types]
path = "../../../platform_types"

