[package]
name = "parsers"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/parsers.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.16.1"

[dependencies.edit]
path = "../edit"

[dependencies.macros]
path = "../../../macros"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.platform_types]
path = "../../../platform_types"

[dev-dependencies]
proptest = "0.10"

[dev-dependencies.pub_arb_rust_code]
path = "../../../pub_arb/rust_code"
