[package]
name = "search"
version = "0.1.0"
authors = ["Ryan1729 <ryan1729@gmail.com>"]
edition = "2018"

[lib]
path= "./src/search.rs"

[dependencies]

[dependencies.macros]
path = "../../../macros"

[dependencies.panic_safe_rope]
path = "../panic_safe_rope"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.rope_pos]
path = "../rope_pos"