[package]
name = "text_buffer"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[lib]
path = "./src/text_buffer.rs"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.if_changed]
path = "../../../if_changed"

[dependencies.macros]
path = "../../../macros"

[dependencies.panic_safe_rope]
path = "../../../panic_safe_rope"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.platform_types]
path = "../../../platform_types"

[dependencies.rope_pos]
path = "../rope_pos"

[dependencies.search]
path = "../search"

[dependencies]
regex = "1.1.9"
lazy_static = "1.3.0"
proptest = { version = "0.9.3", optional = true }
pretty_assertions = { version = "0.6.1", optional = true }
pub_arb_std = { path = "../../../pub_arb/std", optional = true }

[dev-dependencies]
proptest = "0.9.3"
pretty_assertions = "0.6.1"
pub_arb_std = { path = "../../../pub_arb/std" }

[features]
default = []
pub_arb = ["proptest", "pretty_assertions", "pub_arb_std"]