[package]
name = "text_buffer"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "./src/text_buffer.rs"

[dependencies.cursors]
path = "../cursors"

[dependencies.edit]
path = "../edit"

[dependencies.editor_types]
path = "../editor_types"

[dependencies.if_changed]
path = "../../../if_changed"

[dependencies.macros]
path = "../../../macros"

[dependencies.move_cursor]
path = "../move_cursor"

[dependencies.panic_safe_rope]
path = "../../../panic_safe_rope"

[dependencies.parsers]
path = "../parsers"

[dependencies.perf_viz]
path = "../../../perf_viz"

[dependencies.platform_types]
path = "../../../platform_types"

[dependencies.rope_pos]
path = "../rope_pos"

[dependencies.search]
path = "../search"

[dependencies]
proptest = { version = "0.10", optional = true }
pretty_assertions = { version = "0.6.1", optional = true }
pub_arb_cursors = { path = "../../../pub_arb/cursors", optional = true }
pub_arb_edit = { path = "../../../pub_arb/edit", optional = true }
pub_arb_std = { path = "../../../pub_arb/std", optional = true }
pub_arb_text_pos = { path = "../../../pub_arb/text_pos", optional = true }
pub_arb_vec1 = { path = "../../../pub_arb/vec1", optional = true }

[dev-dependencies]
proptest = "0.10"
pretty_assertions = "0.6.1"
pub_arb_cursors = { path = "../../../pub_arb/cursors" }
pub_arb_edit = { path = "../../../pub_arb/edit" }
pub_arb_std = { path = "../../../pub_arb/std" }
pub_arb_text_pos = { path = "../../../pub_arb/text_pos" }
pub_arb_vec1 = { path = "../../../pub_arb/vec1" }

[features]
default = []
extra-prints = []
pub_arb = ["proptest", "pretty_assertions", "pub_arb_cursors", "pub_arb_edit", "pub_arb_std", "pub_arb_text_pos", "pub_arb_vec1"]